syntax = "proto3";

option csharp_namespace = "gRPC_Server";

package math;

// The Math service definition
service Math {
  rpc Add (AddRequest) returns (AddReply);
}

// The AddRequest message
message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

// The AddReply message
message AddReply {
  int32 result = 1;
}
